# django-slugify-processor

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .style.yapf  .tmuxp.yaml  .tool-versions  .travis.yml  AGENTS.md  CHANGES  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  justfile  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: docs.yml  dsp-ci.yml  publish-docs.yml  tests.yml
django_slugify_processor/: __about__.py  filters.py  text.py
django_slugify_processor/templatetags/: slugify_processor.py
doc/: conf.py  index.rst
doc/_static/: django-slugify-processor.css
doc/_templates/: layout.html  star.html
docs/: AGENTS.md  Makefile  api.md  api.rst  conf.py  developing.md  history.md  index.md  index.rst  justfile  manifest.json  quickstart.md  redirects.txt
docs/_templates/: layout.html  more.html  page.html  star.html
docs/project/: code-style.md  contributing.md  index.md  releasing.md
examples/: coding.py
requirements/: dev.txt  doc.txt  test.txt
src/django_slugify_processor/: __about__.py  __init__.py  settings.py  text.py
src/django_slugify_processor/templatetags/: __init__.py  slugify_processor.py
test_app/: __init__.py  coding.py  models.py
tests/: __init__.py  settings.py  test_docs_examples.py  test_filters.py  test_test_project.py  test_text.py
