[tool.poetry]
name = "django-slugify-processor"
version = "1.3.0"
description = "pipeline for slugification edgecases in django"

classifiers = [
  'Development Status :: 5 - Production/Stable',
  'Environment :: Web Environment',
  'Framework :: Django',
  'Framework :: Django :: 2.2',
  'Framework :: Django :: 3.1',
  'Framework :: Django :: 3.2',
  'Framework :: Django :: 4.0',
  'Intended Audience :: Developers',
  'License :: OSI Approved :: MIT License',
  'Operating System :: OS Independent',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.7',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: Implementation :: CPython',
  'Programming Language :: Python :: Implementation :: PyPy',
  'Topic :: Utilities',
]

license = "MIT"

authors = [
  "Tony Narlock <tony@git-pull.com>",
]

readme = 'README.md'
packages = [
  { include = "*", from = "src" },
]
include = [
  { path = "tests", format = "sdist" },
]
keywords = ["django", "slug", "text"]

homepage = "https://django-slugify-processor.git-pull.com"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/tony/django-slugify-processor/issues"
Documentation = "https://django-slugify-processor.git-pull.com"
Repository = "https://github.com/tony/django-slugify-processor"
Changes = "https://github.com/tony/django-slugify-processor/blob/master/CHANGES"

[tool.poetry.dependencies]
python = "^3.7"
django-extensions = { version = "*", optional = true }
Django = ">=2.2"

[tool.poetry.dev-dependencies]
### Docs ###
sphinx = "*"
furo = "*"
gp-libs = "~0.0.1a9"
sphinx-autobuild = "*"
sphinx-autodoc-typehints = "*"
sphinx-inline-tabs = { version = "*", python = "^3.7" }
sphinxext-opengraph = "*"
sphinx-copybutton = "*"
sphinxext-rediraffe = "*"
myst_parser = "*"

### Testing ###
pytest = "*"
pytest-rerunfailures = "*"
pytest-django = "*"
pytest-watcher = "^0.2.3"
django-extensions = "*"

### Coverage ###
codecov = "*"
coverage = "*"
pytest-cov = "*"

### Format ###
black = "*"
isort = "*"

### Lint ###
flake8 = "*"
flake8-bugbear = "^22.8.23"
flake8-comprehensions = "^3.10.0"
mypy = "*"
django-stubs = "^1.12.0"

[tool.poetry.extras]
docs = [
  "sphinx",
  "sphinx-autodoc-typehints",
  "sphinx-autobuild",
  "sphinx-copybutton",
  "sphinxext-opengraph",
  "sphinx-inline-tabs",
  "sphinxext-rediraffe",
  "myst_parser",
  "furo",
  "gp-libs",
]
test = [
  "pytest",
  "pytest-rerunfailures",
  "pytest-django",
  "pytest-watcher",
  "django-extensions",
]
coverage = ["codecov", "coverage", "pytest-cov"]
format = ["black", "isort"]
lint = [
  "flake8",
  "flake8-bugbear",
  "flake8-comprehensions",
  "mypy",
  "django-stubs",
]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "tests.settings"

[[tool.mypy.overrides]]
module = [
  "django_extensions.*",
]
ignore_missing_imports = true

[build-system]
requires = ["poetry_core>=1.0.0", "poetry>=1.1.12"]
build-backend = "poetry.core.masonry.api"
