[tool.poetry]
name = "django-slugify-processor"
version = "1.4.0"
description = "pipeline for slugification edgecases in django"

classifiers = [
  'Development Status :: 5 - Production/Stable',
  'Environment :: Web Environment',
  'Framework :: Django',
  'Framework :: Django :: 3.2',
  'Framework :: Django :: 4.0',
  'Framework :: Django :: 4.1',
  'Framework :: Django :: 4.2',
  'Intended Audience :: Developers',
  'License :: OSI Approved :: MIT License',
  'Operating System :: OS Independent',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: Implementation :: CPython',
  'Programming Language :: Python :: Implementation :: PyPy',
  'Topic :: Utilities',
  "Typing :: Typed",
]

license = "MIT"

authors = [
  "Tony Narlock <tony@git-pull.com>",
]

readme = 'README.md'
packages = [
  { include = "*", from = "src" },
]
include = [
  { path = "tests", format = "sdist" },
]
keywords = ["django", "slug", "text"]

homepage = "https://django-slugify-processor.git-pull.com"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/tony/django-slugify-processor/issues"
Documentation = "https://django-slugify-processor.git-pull.com"
Repository = "https://github.com/tony/django-slugify-processor"
Changes = "https://github.com/tony/django-slugify-processor/blob/master/CHANGES"

[tool.poetry.dependencies]
python = "^3.8"
django-extensions = { version = "*", optional = true }
Django = ">=3.2"

[tool.poetry.group.dev.dependencies]
### Docs ###
sphinx = "*"
furo = "*"
gp-libs = "~0.0.2"
sphinx-autobuild = "*"
sphinx-autodoc-typehints = "*"
sphinx-inline-tabs = "*"
sphinxext-opengraph = "<0.8" # https://github.com/wpilibsuite/sphinxext-opengraph/issues/100
sphinx-copybutton = "*"
sphinxext-rediraffe = "*"
myst_parser = ">=0.18.1"

### Testing ###
pytest = "*"
pytest-rerunfailures = "*"
pytest-django = "*"
pytest-watcher = "*"
django-extensions = "*"

### Coverage ###
codecov = "*"
coverage = "*"
pytest-cov = "*"

### Lint ###
black = "*"
ruff = "*"
mypy = "*"
django-stubs = "*"

[tool.poetry.extras]
docs = [
  "sphinx",
  "sphinx-autodoc-typehints",
  "sphinx-autobuild",
  "sphinx-copybutton",
  "sphinxext-opengraph",
  "sphinx-inline-tabs",
  "sphinxext-rediraffe",
  "myst_parser",
  "furo",
  "gp-libs",
]
test = [
  "pytest",
  "pytest-rerunfailures",
  "pytest-django",
  "pytest-watcher",
  "django-extensions",
]
coverage = ["codecov", "coverage", "pytest-cov"]
lint = [
  "black",
  "ruff",
  "mypy",
  "django-stubs",
]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
strict = true
files = [
  "src/",
  "tests/",
]

[tool.django-stubs]
django_settings_module = "tests.settings"

[[tool.mypy.overrides]]
module = [
  "django_extensions.*",
]
ignore_missing_imports = true

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "*/_compat.py",
  "docs/conf.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise NotImplementedError",
  "return NotImplemented",
  "def parse_args",
  "if TYPE_CHECKING:",
  "if t.TYPE_CHECKING:",
  "@overload( |$)",
]

[tool.ruff]
target-version = "py37"
select = [
  "E", # pycodestyle
  "F", # pyflakes
  "I", # isort
  "UP", # pyupgrade
  "B", # flake8-bugbear
  "C4", # flake8-comprehensions
  "Q", # flake8-quotes
  "PTH", # flake8-use-pathlib
  "SIM", # flake8-simplify
  "TRY", # Trycertatops
  "PERF", # Perflint
  "RUF", # Ruff-specific rules
]

[tool.ruff.isort]
known-first-party = [
  "django_slugify_processor",
]
combine-as-imports = true

[tool.ruff.per-file-ignores]
"*/__init__.py" = ["F401"]

[tool.pytest.ini_options]
addopts = "--tb=short --no-header --showlocals --doctest-modules"
doctest_optionflags = "ELLIPSIS NORMALIZE_WHITESPACE"
testpaths = [
  "src/django_slugify_processor",
  "tests",
  "docs",
]
pythonpath = ". tests"
filterwarnings = [
  "ignore:The frontend.Option(Parser)? class.*:DeprecationWarning::",
]

# pytest-django
django_find_project = false
DJANGO_SETTINGS_MODULE = "tests.settings"

[build-system]
requires = ["poetry_core>=1.0.0", "poetry>=1.1.12"]
build-backend = "poetry.core.masonry.api"
